--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,24 @@
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
-  background: #f1f1f5;
+  background: #c5f6fa;
+}
+
+.root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 *,
